# SuperPlayer

./: build.gradle  release.keystore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 1524.pcm  1528.pcm  1529.pcm  1531.pcm  1532.pcm
app/src/main/jni/: libs.cmake  super_player_jni.cpp
app/src/main/jni/audio/: audio_engine.cpp  audio_engine.h  observer.h  super_audio.cpp  super_audio.h
app/src/main/jni/audio/codec/: aac_encoder.cpp  aac_encoder.h  audio_decoder.cpp  audio_decoder.h  audio_encoder.cpp  audio_encoder.h  codec_utils.h  fdk_aac_encoder.cpp  fdk_aac_encoder.h  ff_decoder.cpp  ff_decoder.h  file_decoder.cpp  file_decoder.h  i_audio_encoder.h  i_video_merger.h  (+5 more)
app/src/main/jni/common/: android_log.h  audio_buffer.h  audio_param.h  circle_buffer.h  common_tools.h  constexpr.h  lock_free_queue.h  matrix.cpp  matrix.h  merger_param.h  papram_factory.h  png_utils.h
app/src/main/jni/music/: SuperAudio.cpp  SuperAudio.h  Test.h
app/src/main/jni/thirdpart/: CMakeLists.txt  empty.h
app/src/main/jni/video/: egl_core.cpp  egl_core.h  gl_view.cpp  gl_view.h  opengl_utils.h  render.cpp  render.h  super_video.cpp  super_video.h  transform.h  video_effect.h
app/src/main/res/drawable/: button_bg.xml  oval.xml  oval_red.xml  oval_white.xml  progress_bar_bg.xml  progress_bar_white_bg.xml  seekbar_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_play.xml  activity_preview.xml  activity_sing.xml  activity_works.xml  custom_effect_layout.xml  custom_seek_bar_layout.xml  filter_item.xml  fragment_bottom.xml  fragment_filter_list.xml  fragment_no_acc_sing.xml  fragment_peview.xml  fragment_preview.xml  fragment_record.xml  fragment_sing.xml  item_filter_list.xml  layout_audio_controller.xml  layout_song_item.xml  music_seek_bar_layout.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
(+231 files in other folders)
